Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
 
         .card-image-1 { background-image: url('https://portal2communityedition.com/_app/immutable/assets/schrodingers-lasers.Bq5st9Uv.webp'); }
 
-.card-image-2 { background-image: url('https://i.ibb.co/xtDTsX2x/IMG-20251219-190527.jpg'); }
+.card-image-2 { background-image: url('https://i.ibb.co/tTG23b0J/IMG-20251219-195031.jpg'); }
 
 .card-image-3 { background-image: url('https://portal2communityedition.com/_app/immutable/assets/clustered.-BrZUlNB.png'); }{ 
 
@@ -1112,7 +1112,7 @@
 
     <footer>
 
-        <p>&copy; 2025 Portal: Not a Lie Team.</p>
+        <p>&copy; 2025 Portal: Not¹ a Lie Team.</p>
 
         <p>Ceci est un fan-mod. Non affilié à Valve Software. Les images provienne de p2ce.org</p>
 
@@ -1161,4 +1161,3 @@
                     e.preventDefault(); 
 
                  
-
